# fringe

./: Cargo.toml  LICENSE-MIT  README.md  fringe.pyi  install_python_lib.sh
examples/: example_array.json  example_sky_model.csv  fftt_image.py
src/: lib.rs  main.rs
tests/: runtime_discrepancy.py
